deploy/vote/stg/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  minReadySeconds: 20
  replicas: 3
  template: 
    spec: 
      containers:
      - image: schoolofdevops/vote:v2
        name: vote
