deploy/vote/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote
  namespace: instavote
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: "stgvote.tibchannels.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend: 
          service:
            name: vote
            port:
              number: 80
